objects/Budget_Revenue__c.object
<CustomObject>
    <fields>
        <fullName>Actual_RWA__c</fullName>
        <label>Actual RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_RoRWA__c</fullName>
        <label>Actual RoRWA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_YTD_Revenues__c</fullName>
        <label>Actual YTD Revenues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Year_Annualised_Revenues__c</fullName>
        <label>YTD annualised revenues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arranging_Fee__c</fullName>
        <label>Arrang. Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Budget_Annualised__c</fullName>
        <label>Annual Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_YTD__c</fullName>
        <label>Budget YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Plan__c</fullName>
        <label>Client Plan</label>
        <referenceTo>Client_Plan__c</referenceTo>
        <relationshipName>Budget_Revenue</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Commitment_Fee__c</fullName>
        <label>Com. Fees</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DG__c</fullName>
        <label>DG</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTP__c</fullName>
        <label>FTP (bps)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LGD__c</fullName>
        <label>LGD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <label>Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Gross Margin</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_year_budget__c</fullName>
        <label>Next year budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_YTD_Revenues__c</fullName>
        <label>Previous YTD Revenues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Year_Annualised_Revenues__c</fullName>
        <label>Previous Year Annualised Revenues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Level_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Level 3</label>
        <referenceTo>Product_Level_3__c</referenceTo>
        <relationshipName>Budget_Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoRWA__c</fullName>
        <label>RoRWA</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Utilisation__c</fullName>
        <label>Utilisation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_RWA__c</fullName>
        <label>YTD RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_RoRWA__c</fullName>
        <label>YTD RoRWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Client Plan Budget &amp; Revenue</label>
    <nameField>
        <displayFormat>BR{00000}</displayFormat>
        <label>Budget &amp; Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Plan Budgets &amp; Revenues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>